syntax = "proto3";

message Sample
{
    string metric_id = 1;
    float timestamp = 2; // s since last epoch
    oneof value
    {
        int32 int_val = 3;
        int64 long_val = 4;
        float float_val = 5;
        double double_val = 6;
        bool bool_val = 7;
        string string_val = 8;
    }
}